--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
@@ -172,7 +172,7 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="HardwareDeSala" asp-action="Index">
                             <i class="nav-icon fa fa-microchip"></i>
-                            <p>Hardware de Sala</p>
+                            <p>Hardwares</p>
                         </a>
                     </li>
                     <li class="nav-item">
