--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/ReservaSala/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/ReservaSala/Create.cshtml
@@ -28,10 +28,10 @@
                                { @class = "form-control", @id = "select-bloco", @onchange = "loadSalas()" })
                                 </div>
                                 <div class="form-group">
-                                    <label asp-for="HorarioSalaModel" class="form-control-label" for="select-sala">Selecionar Sala</label>
+                                    <label asp-for="HorarioSalaModel.SalaId" class="form-control-label" for="select-sala">Selecionar Sala</label>
                                     @Html.DropDownListFor(model => model.HorarioSalaModel.SalaId, ViewBag.salas as SelectList, new
                                     { @class = "form-control", @id = "select-sala" })
-                                    <span asp-validation-for="HorarioSalaModel" class="text-danger"></span>
+                                    <span asp-validation-for="HorarioSalaModel.SalaId" class="text-danger"></span>
                                 </div>
                                 <div class="ocupation col-md-10">
                                     <div class="form-group align-element ">
