--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Home/Index.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Home/Index.cshtml
@@ -32,57 +32,71 @@
                                                 </h4>
                                             </div>                                          
                                             <div class="float-right">
-                                                <div class="float-right">
+                                                <div class="float-right text-center">
                                                     <div class="align-element">
-                                                        <form asp-controller="Home" asp-action="MonitorarSala" id="form-@item.MonitoramentoLuzes.Id">
+                                                        @if (@item.MonitoramentoLuzes?.Id > 0)
+                                                        {
+                                                            <form asp-controller="Home" asp-action="MonitorarSala" id="form-@item.MonitoramentoLuzes.Id">
 
-                                                            <div class="form-control" hidden>
-                                                                <input class="form-control" name="SalaId" value="@item.Sala.Id" />
-                                                                <input class="form-control" name="EquipamentoId" value="@item.MonitoramentoLuzes.EquipamentoId" />
-                                                                <input class="form-control" name="Id" value="@item.MonitoramentoLuzes.Id" />
-                                                                <input class="form-control" name="SalaParticular" value="True" />
-                                                            </div>
+                                                                <div class="form-control" hidden>
+                                                                    <input class="form-control" name="SalaId" value="@item.Sala.Id" />
+                                                                    <input class="form-control" name="EquipamentoId" value="@item.MonitoramentoLuzes.EquipamentoId" />
+                                                                    <input class="form-control" name="Id" value="@item.MonitoramentoLuzes.Id" />
+                                                                    <input class="form-control" name="SalaParticular" value="True" />
+                                                                </div>
 
-                                                            <h5 class="card-text">Luzes</h5>
-                                                            <label class="switch" onchange="submitForm('form-@item.MonitoramentoLuzes.Id',@item.SalaExclusiva.Id,true)">
-                                                                @if (item.MonitoramentoLuzes.Estado)
-                                                                {
-                                                                    <input type="checkbox" name="Estado" id="luzes-@item.SalaExclusiva.Id" value="@item.MonitoramentoLuzes.Estado" checked />
-                                                                }
-                                                                else
-                                                                {
-                                                                    <input type="checkbox" name="Estado" id="luzes-@item.SalaExclusiva.Id" value="@item.MonitoramentoLuzes.Estado" />
-                                                                }
-                                                                <span class="slider round"></span>
-                                                            </label>
+                                                                <h5 class="card-text">Luzes</h5>
+                                                                <label class="switch" onchange="submitForm('form-@item.MonitoramentoLuzes.Id',@item.SalaExclusiva.Id,true)">
+                                                                    @if (item.MonitoramentoLuzes.Estado)
+                                                                    {
+                                                                        <input type="checkbox" name="Estado" id="luzes-@item.SalaExclusiva.Id" value="@item.MonitoramentoLuzes.Estado" checked />
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <input type="checkbox" name="Estado" id="luzes-@item.SalaExclusiva.Id" value="@item.MonitoramentoLuzes.Estado" />
+                                                                    }
+                                                                    <span class="slider round"></span>
+                                                                </label>
 
-                                                        </form>
+                                                            </form>
+                                                        }
+                                                        else
+                                                        {
+                                                            <h5 class="card-text">Sem Luzes</h5>
+                                                        }
                                                     </div>
                                                 </div>
-                                                <div class="float-right">
+                                                <div class="float-right text-center">
                                                     <div class="align-element">
-                                                        <form asp-controller="Home" asp-action="MonitorarSala" id="form-@item.MonitoramentoCondicionadores.Id">
+                                                        @if (@item.MonitoramentoCondicionadores?.Id > 0)
+                                                        {
+                                                            <form asp-controller="Home" asp-action="MonitorarSala" id="form-@item.MonitoramentoCondicionadores.Id">
 
-                                                            <div class="form-control" hidden>
-                                                                <input class="form-control" name="SalaId" value="@item.Sala.Id" />
-                                                                <input class="form-control" name="EquipamentoId" value="@item.MonitoramentoCondicionadores.EquipamentoId" />
-                                                                <input class="form-control" name="Id" value="@item.MonitoramentoCondicionadores.Id" />
-                                                                <input class="form-control" name="SalaParticular" value="True" />
-                                                            </div>
+                                                                <div class="form-control" hidden>
+                                                                    <input class="form-control" name="SalaId" value="@item.Sala.Id" />
+                                                                    <input class="form-control" name="EquipamentoId" value="@item.MonitoramentoCondicionadores.EquipamentoId" />
+                                                                    <input class="form-control" name="Id" value="@item.MonitoramentoCondicionadores.Id" />
+                                                                    <input class="form-control" name="SalaParticular" value="True" />
+                                                                </div>
 
-                                                            <h5 class="card-text">Condicionadores</h5>
-                                                            <label class="switch" onchange="submitForm('form-@item.MonitoramentoCondicionadores.Id',@item.SalaExclusiva.Id,true)">
-                                                                @if (item.MonitoramentoCondicionadores.Estado)
-                                                                {
-                                                                    <input type="checkbox" name="Estado" id="arCondicionado-@item.SalaExclusiva.Id" value="@item.MonitoramentoCondicionadores.Estado" checked />
-                                                                }
-                                                                else
-                                                                {
-                                                                    <input type="checkbox" name="Estado" id="arCondicionado-@item.SalaExclusiva.Id" value="@item.MonitoramentoCondicionadores.Estado" />
-                                                                }
-                                                                <span class="slider round"></span>
-                                                            </label>
-                                                        </form>
+                                                                <h5 class="card-text">Condicionadores</h5>
+                                                                <label class="switch" onchange="submitForm('form-@item.MonitoramentoCondicionadores.Id',@item.SalaExclusiva.Id,true)">
+                                                                    @if (item.MonitoramentoCondicionadores.Estado)
+                                                                    {
+                                                                        <input type="checkbox" name="Estado" id="arCondicionado-@item.SalaExclusiva.Id" value="@item.MonitoramentoCondicionadores.Estado" checked />
+                                                                    }
+                                                                    else
+                                                                    {
+                                                                        <input type="checkbox" name="Estado" id="arCondicionado-@item.SalaExclusiva.Id" value="@item.MonitoramentoCondicionadores.Estado" />
+                                                                    }
+                                                                    <span class="slider round"></span>
+                                                                </label>
+                                                            </form>
+                                                        }
+                                                        else
+                                                        {
+                                                            <h5 class="card-text">Sem ares-condicionados</h5>
+                                                        }
                                                     </div>
                                                 </div>
                                             </div>
