input de senha com limitações no html

--- a/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Usuario/Create.cshtml
+++ b/Codigo/ModuloDeSoftware/WebAPI/SalasUfsWeb/Views/Usuario/Create.cshtml
@@ -41,7 +41,7 @@
             </div>
             <span asp-validation-for="UsuarioModel.DataNascimento" class="text-danger"></span>
             <div class="input-group mb-3">
-                <input id="senha_auth" asp-for="UsuarioModel.Senha" class="form-control" placeholder="Senha" />
+                <input id="senha_auth" asp-for="UsuarioModel.Senha" class="form-control" placeholder="Senha" minlength="8" maxlength="16" />
                 <div class="input-group-append">
                     <div class="input-group-text">
                         <span class="fas fa-lock"></span>
